pasta python basico

--- a/0_PYTHON_BASICO/0_PYTHON_BASICO.ipynb
+++ b/0_PYTHON_BASICO/0_PYTHON_BASICO.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false
    },
@@ -30,8 +30,7 @@
      "text": [
       "Tipo do dado em a: <class 'int'>\n",
       "Tipo do dado em b: <class 'float'>\n",
-      "7.4\n",
-      "0.6666666666666666\n"
+      "7.4\n"
      ]
     }
    ],
@@ -50,21 +49,83 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Os operadores aritméticos usados em python são"
+    "Os operadores aritméticos usados em python são\n",
+    "\n",
+    "<img src=\"https://github.com/tiagoburiol/NUMETHODS/raw/master/0_PYTHON_BASICO/imagens/operadores_aritmeticos.jpg\" width=\"480\">\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Além dos tipos numéricos simples, as listas e tuplas são bastante úteis em computação numérica. \n",
+    "Os operadores aritméticos usados em python são\n",
     "\n",
-    "**EXEMPLO 2**"
+    "<img src=\"https://github.com/tiagoburiol/NUMETHODS/raw/master/0_PYTHON_BASICO/imagens/operadores_relacionais.jpg\" width=\"440\">\n",
+    "\n",
+    "Os operadores lógicos são **and**, **or** e **not**."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "O exemplo a seguir mostra algumas formas de modificar o tipo dado armazenado em uma variável.\n",
+    "\n",
+    "** EXEMPLO 2**"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 17,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7 <class 'int'>\n",
+      "2.3333333333333335 <class 'float'>\n",
+      "2 <class 'int'>\n",
+      "(2+0j) <class 'complex'>\n",
+      "(2+0j) <class 'str'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = 7\n",
+    "print (x,type(x))\n",
+    "\n",
+    "x = 7/3\n",
+    "print (x,type(x))\n",
+    "\n",
+    "x = int(x)\n",
+    "print (x,type(x))\n",
+    "\n",
+    "x = complex(x)\n",
+    "print (x,type(x))\n",
+    "\n",
+    "x = str(x)\n",
+    "print (x,type(x))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Além dos tipos numéricos e de caracteres, as listas e tuplas são bastante úteis em computação numérica. \n",
+    "\n",
+    "As listas são um tipo de variável muito útil no Python. Uma lista pode conter uma série de valores. As variáveis de lista são declaradas usando colchetes [] após o nome da variável.\n",
+    "\n",
+    "Tuplas são uma sequência de valores assim como uma lista e são manipulados de maneira similar. Mas as tuplas são fixas em tamanho quando são atribuídas. Em Python, o tamanho fixo é considerado imutável em comparação a uma lista dinâmica e mutável. Tuplas são definidas por parênteses ().\n",
+    "\n",
+    "**EXEMPLO 3**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
    "metadata": {
     "collapsed": false
    },
@@ -79,6 +140,9 @@
    ],
    "source": [
     "l = [2, -1, 4]\n",
+    "\n",
+    "\n",
+    "\n",
     "print (sum(l))"
    ]
   },
