--- a/2_SISTEMAS_LINEARES/2.1_introducao_e_conceitos_fundamentais.ipynb
+++ b/2_SISTEMAS_LINEARES/2.1_introducao_e_conceitos_fundamentais.ipynb
@@ -73,9 +73,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -120,9 +118,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -168,9 +164,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -196,6 +190,123 @@
     "plt.plot(xi, eq1(xi), \"b-\",  xi, eq2(xi), \"r-\") \n",
     "plt.grid()\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Condicionamento de matrizes\n",
+    "\n",
+    "Sabemos que um sistema linear $n \\times n$, $Ax=b$ tem solução única se $det(A) \\neq 0$, caso $det(A)=0$ dizemos que a matriz $A$ é singular e o sistema poderá ter infinitas soluções ou nenhuma solução. Mas o que acontece se a matriz é \"quase singular\" ($det(A)$ é muito pequeno)?\n",
+    "\n",
+    "Dizemos que $det(A)$ é muito pequeno se $|A|<<||A||$ onde $||A||$ é a **norma** da matriz $A$. \n",
+    "\n",
+    "Normas de matrizes podem ser definidas de varias formas diferentes. Chamamos de **norma Euclidiana** ao valor dado por\n",
+    "$$ ||A||_e = \\sqrt{\\sum^n_{i=1} \\sum^n_{j=1} A_{ij}^2}$$\n",
+    "\n",
+    "e **norma linha** ou **norma infinito** ao valor dado por\n",
+    "$$||A||_{\\infty} = max_{1 \\leq i \\leq n} \\sum_{j=1}^n |A_{ij}| $$\n",
+    "\n",
+    "Uma medida formal para o condicionamento de uma matriz, o **número de condicionamento da matriz** definido como \n",
+    "\n",
+    "$$cond(A) = ||A|| \\left| \\left| A^{-1} \\right|\\right| $$\n",
+    "\n",
+    "se esse número estiver próximo de 1, então a matriz é bem condicionada. Esse número aumenta com o mal condicionamento da matriz. \n",
+    "\n",
+    "Infelizmente, o número de condicionamento é computacionalmente oneroso para matrizes grandes. Então, muitas vezes é suficiente estimar o condicionamento comparando o determinante com a magnitude dos elementos da matriz. \n",
+    "\n",
+    "Se as equações estiverem mal condicionadas, pequenas mudanças nos coeficientes da matriz resultarão em grandes mudanças na solução.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Exemplo"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 1501.5 -3000. ]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import scipy.linalg as la\n",
+    "\n",
+    "A = [[2, 1], [2, 1.001]]\n",
+    "b = [3, 0]\n",
+    "print (la.solve(A,b))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5001.000500000551\n"
+     ]
+    }
+   ],
+   "source": [
+    "print (la.norm(A) * la.norm(la.inv(A)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.0019999999999997797"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "la.det(A)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[  751.5 -1500. ]\n"
+     ]
+    }
+   ],
+   "source": [
+    "A = [[2, 1], [2, 1.002]]\n",
+    "print (la.solve(A,b))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Observe que uma mudança no coeficiente na ordem de 1% gerou uma diferença na solução de 100%!"
    ]
   },
   {
@@ -234,9 +345,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -290,9 +399,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -348,7 +455,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.1"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
