--- a/0_PYTHON_NUMERICO_BASICO/0.2_numpy_basico.ipynb
+++ b/0_PYTHON_NUMERICO_BASICO/0.2_numpy_basico.ipynb
@@ -6,6 +6,125 @@
    "source": [
     "# 0.2 O básico sobre Numpy\n",
     "\n",
+    "## Listas do Python vs Arrays do Numpy\n",
+    "\n",
+    "Os arrays do Numpy são muito parecidos com as listas do Python, mas possuem diferenças importantes que devem ser conhecidas."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Por exemplo, observe que a forma de acessar elementos da lista e do array é a mesma "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n",
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = [1, 2, 3, -1]\n",
+    "y = [-2, 3, 0.3, 1]\n",
+    "print (x[2])\n",
+    "print (y[-1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10.0\n",
+      "1.2\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "u = np.array([2, 5, 0.5, 10])\n",
+    "v = np.array([-1, 0.5, 1.2, 3])\n",
+    "print (u[3])\n",
+    "print (v[-2])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Mas operações com arrays do Numpy são feitas elemento a elemento. Então, devemos ter cuidado para não confundir as operações com arrays do numpy com as operações com listas do python, pois os resultados podem ser diferentes do que o esperado. \n",
+    "Veja os exemplos abaixo."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, -1, 1, 2, 3, -1]\n",
+      "[1, 2, 3, -1, -2, 3, 0.3, 1]\n"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "unsupported operand type(s) for ** or pow(): 'list' and 'int'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-31-abdc4598b428>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m2\u001b[0m\u001b[1;33m*\u001b[0m\u001b[0mx\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mx\u001b[0m\u001b[1;33m+\u001b[0m\u001b[0my\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 3\u001b[1;33m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mx\u001b[0m\u001b[1;33m**\u001b[0m\u001b[1;36m2\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m: unsupported operand type(s) for ** or pow(): 'list' and 'int'"
+     ]
+    }
+   ],
+   "source": [
+    "print(2*x)\n",
+    "print(x+y)\n",
+    "print(x**2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[-2.   1.   2.4  6. ]\n",
+      "[ 1.   5.5  1.7 13. ]\n",
+      "[1.   0.25 1.44 9.  ]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(2*v)\n",
+    "print(v+u)\n",
+    "print(v**2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Vectors, Matrices, and Multidimensional Arrays\n",
     "\n",
     "Vetores, matrizes e _arrays_ de dimensões superiores são ferramentas essenciais na computação numérica. Quando um o cálculo deve ser repetido para um conjunto de valores de entrada, é natural e vantajoso representar o\n",
@@ -143,6 +262,109 @@
    "source": [
     "heaviside = np.vectorize(heaviside)\n",
     "heaviside(x) "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Operações básicas com arrays\n",
+    "As operações com arrays do Numpy são feitas elemento a elemento. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Exemplo"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 2  4  6 -2]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "v = np.array([1, 2, 3, -1])\n",
+    "u = np.array([2, 5, 0.5, 10])\n",
+    "print (2*v)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[3.  7.  3.5 9. ]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print (u+v)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[4 5 6 2]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print (3+v)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[  2.   10.    1.5 -10. ]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print (u*v)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[  4.    25.     0.25 100.  ]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print (u**2)"
    ]
   },
   {
