--- a/0_PYTHON_NUMERICO_BASICO/0.2_numpy_basico.ipynb
+++ b/0_PYTHON_NUMERICO_BASICO/0.2_numpy_basico.ipynb
@@ -371,6 +371,91 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Calculando o produto interno (ou produto de matrizes)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3.5\n"
+     ]
+    }
+   ],
+   "source": [
+    "print (np.dot(u,v))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[18  1]\n",
+      " [27 13]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "A = np.array([[2,1],[-1,4]])\n",
+    "B = np.array([[5,-1],[8,3]])\n",
+    "print(np.dot(A,B))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Somando os elementos de um array"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(np.sum(v))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(np.max(v))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Manipulando matrizes\n"
    ]
   },
