--- a/0_PYTHON_NUMERICO_BASICO/0.2_numpy_basico.ipynb
+++ b/0_PYTHON_NUMERICO_BASICO/0.2_numpy_basico.ipynb
@@ -127,19 +127,17 @@
    "source": [
     "## Vectors, Matrices, and Multidimensional Arrays\n",
     "\n",
-    "Vetores, matrizes e _arrays_ de dimensões superiores são ferramentas essenciais na computação numérica. Quando um o cálculo deve ser repetido para um conjunto de valores de entrada, é natural e vantajoso representar o\n",
-    "dados como _arrays_ e o cálculo em termos de operações entre _arrays_.\n",
+    "Vetores, matrizes e _arrays_ de dimensões superiores são ferramentas essenciais na computação numérica. Quando um o cálculo deve ser repetido para um conjunto de valores de entrada, é natural e vantajoso representar o dados como _arrays_ e processar cálculos em termos de operações entre _arrays_.\n",
     "\n",
     "Processamento computacional numérico formulado dessa forma são ditos vetorizados. A computação vetorizada elimina a necessidade de muitos _loops_ explícitos sobre os elementos da matriz, aplicando operações em blocos de dados da matriz. \n",
     "\n",
-    "O resultado é um código conciso e mais fácil de entender e gerenciar, além disso, permite realizar operações em bibliotecas de baixo nível, mais eficientes. Computações vetorizadas podem, portanto, ser significativamente mais rápidas do que cálculos sequenciais elemento a elemento. \n",
+    "O resultado é um código conciso e mais fácil de entender e gerenciar, além disso, permite realizar operações em bibliotecas de baixo nível (BLAS, LAPACK,etc), mais eficientes. Computações vetorizadas podem, portanto, ser significativamente mais rápidas do que cálculos sequenciais elemento a elemento. \n",
     "\n",
     "Isso é particularmente importante em uma linguagem interpretada como Python, onde laços elemento a elemento resultam em uma demanda de desempenho significativa.\n",
     "\n",
     "No ambiente de computação científica do Python, estruturas de dados eficientes para trabalhar com matrizes são fornecido pela biblioteca NumPy. \n",
     "\n",
-    "O núcleo do NumPy é implementado em C e fornece funções eficientes\n",
-    "para manipular e processar matrizes. \n",
+    "O núcleo do NumPy é implementado em C e fornece funções eficientes para manipular e processar matrizes. \n",
     "\n",
     "À primeira vista, os arrays NumPy têm alguma semelhança com o Python\n",
     "listar estrutura de dados. Mas uma diferença importante é que, enquanto as listas do Python são recipientes genéricos de objetos,\n",
