--- a/2_SISTEMAS_LINEARES/2.5_metodos_iterativos.ipynb
+++ b/2_SISTEMAS_LINEARES/2.5_metodos_iterativos.ipynb
@@ -93,16 +93,91 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "source": [
-    "## Exemplo: Gauss-Seidel\n"
+    "## Método iterativo de Gaus-Seidel\n",
+    "\n",
+    "Considere um sistema  de equações lineares $Ax = b$ em que $det(A) \\neq 0$, com a diagonal principal $a_{ii} \\neq 0$, $i=1,...,n$ como segue\n",
+    "\n",
+    "$$ \\begin{cases} \n",
+    "\t         a_{11}x_1 +a_{12}x_2 + \\cdots + a_{1n}x_n = b_1\\\\ \n",
+    "\t         a_{21}x_1 +a_{22}x_2 + \\cdots + a_{2n}x_n = b_2\\\\\n",
+    "\t         \\vdots   \\\\\n",
+    "\t         a_{n1}x_1 +a_{n2}x_2 + \\cdots + a_{nn}x_n = b_1\\\\\n",
+    "             \\end{cases} $$\n",
+    "\n",
+    "Dividindo cada linha do sistema dado pelo elemento da diagonal e isolando $x_1$ na $1^a$ equação, $x_2$ na $2^a$ equação até $x_n$ na n-ésima equação, temos o sistema escrito na forma equivalente:\n",
+    "\n",
+    "$$ \\begin{cases} \n",
+    "\t         x_1 = \\frac{1}{a_{11}} \\left(b_1  - a_{12}x_2 - a_{13}x_3 - \\cdots - a_{1n}x_n \\right)\\\\ \n",
+    "\t         x_2 = \\frac{1}{a_{22}} \\left(b_2  - a_{21}x_1 - a_{23}x_3 - \\cdots - a_{2n}x_n \\right)\\\\ \n",
+    "\t         \\vdots   \\\\\n",
+    "\t         x_n = \\frac{1}{a_{nn}} \\left(b_n  - a_{n1}x_1 - a_{n2}x_2 - \\cdots - a_{n \\, n-1}x_{n-1} \\right)\\\\ \n",
+    "\\end{cases} $$\n",
+    "\n",
+    "O método iterativo de Gauss-Seidel é dado da seguinte forma:\n",
+    "\n",
+    "$$ \\begin{cases} \n",
+    "             x_1^{(k+1)} = \\frac{b_1}{a_{11}}  - \\frac{a_{12}}{a_{11}}x_2^{(k)} - \\frac{a_{13}}{a_{11}}x_3^{(k)} - \\cdots - \\frac{a_{1n}}{a_{11}}x_n^{(k)} \\\\ \n",
+    "\t         x_2^{(k+1)} = \\frac{b_2}{a_{22}}  - \\frac{a_{21}}{a_{22}}x_1^{(k+1)} - \\frac{a_{23}}{a_{22}}x_3^{(k)} - \\cdots - \\frac{a_{1n}}{a_{11}}x_n^{(k)} \\\\ \n",
+    "\t         \\vdots   \\\\\n",
+    "\t         x_n^{(k+1)} = \\frac{b_n}{a_{nn}}  - \\frac{a_{n1}}{a_{nn}}x_1^{(k+1)} - \\frac{a_{n2}}{a_{nn}}x_3^{(k+1)} - \\cdots - \\frac{a_{n \\, n-1}}{a_{nn}}x_{n-1}^{(k+1)} \\\\\n",
+    "\\end{cases} $$\n",
+    "\n",
+    "\n",
+    "Que, na forma matricial pode ser escrito como\n",
+    "\n",
+    "$$\\left[\n",
+    "    \\begin{array}{c} \n",
+    "\t         x_1^{(k+1)} \\\\ \n",
+    "\t         x_2^{(k+1)} \\\\\n",
+    "             \\vdots\\\\\n",
+    "\t         x_n^{(k+1)} \\\\\n",
+    "\t\\end{array} \n",
+    "\\right]\n",
+    "=\n",
+    "\\left[\\begin{array}{ccccc} \n",
+    "\t         0                     & 0 & 0 & \\cdots & 0 \\\\ \n",
+    "\t         -\\frac{a_{21}}{a_{22}} & 0 & 0 & \\cdots & 0 \\\\\n",
+    "\t         \\vdots & \\vdots & \\vdots & \\vdots & \\vdots \\\\\n",
+    "\t         -\\frac{a_{n1}}{a_{nn}} & -\\frac{a_{n2}}{a_{nn}} & \\cdots & -\\frac{a_{n \\,n-1}}{a_{nn}} & 0\\\\\n",
+    "\t         \\end{array} \\right]\n",
+    "             \\left[\n",
+    "    \\begin{array}{c} \n",
+    "\t         x_1^{(k+1)} \\\\ \n",
+    "\t         x_2^{(k+1)} \\\\\n",
+    "             \\vdots\\\\\n",
+    "\t         x_n^{(k+1)} \\\\\n",
+    "\t\\end{array} \n",
+    "\\right]\n",
+    "+\n",
+    "\\left[\\begin{array}{ccccc} \n",
+    "\t         0&  -\\frac{a_{12}}{a_{11}}& -\\frac{a_{13}}{a_{11}}& \\cdots &-\\frac{a_{1n}}{a_{11}} \\\\ \n",
+    "\t         0& 0& -\\frac{a_{23}}{a_{22}} & \\cdots & -\\frac{a_{2n}}{a_{22}} \\\\\n",
+    "\t         \\vdots & \\vdots & \\vdots & \\vdots & \\vdots \\\\\n",
+    "\t         0& 0& 0& \\cdots& 0\\\\\n",
+    "\t         \\end{array} \\right]\n",
+    "\\left[\\begin{array}{c} \n",
+    "\t         x_1^{(k)} \\\\ \n",
+    "\t         x_2^{(k)} \\\\\n",
+    "             \\vdots\\\\\n",
+    "\t         x_n^{(k)} \\\\\n",
+    "\t\\end{array} \\right]\n",
+    "+\n",
+    "\\left[ \\begin{array}{c} \n",
+    "\t         \\frac{b1}{a_{11}} \\\\ \n",
+    "\t         \\frac{b2}{a_{22}} \\\\\n",
+    "             \\vdots\\\\\n",
+    "\t         \\frac{bn}{a_{nn}} \\\\\n",
+    "\t\\end{array} \\right]$$\n",
+    "\n",
+    "\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -112,8 +187,8 @@
      "output_type": "stream",
      "text": [
       "(0.8000, 1.0333, -0.0778) err= 1.0\n",
-      "(0.9911, 1.0015, -0.0035) err= 0.19082840236686394\n",
-      "(0.9996, 1.0001, -0.0002) err= 0.00849326793297563\n"
+      "(0.9911, 1.0015, -0.0035) err= 0.190828402367\n",
+      "(0.9996, 1.0001, -0.0002) err= 0.00849326793298\n"
      ]
     }
    ],
