--- a/2_SISTEMAS_LINEARES/2.5_metodos_iterativos.ipynb
+++ b/2_SISTEMAS_LINEARES/2.5_metodos_iterativos.ipynb
@@ -4,9 +4,102 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Métodos Iterativos\n",
+    "# 2.5 Métodos Iterativos\n",
     "\n",
-    "## Exemplos  Jacobi-Richardson\n"
+    "Em certos casos, os métodos iterativos são mais indicados do que os métodos diretos (exatos), como por exemplo, quando a matriz dos coeficientes é uma matriz esparsa. Eles ainda necessitam de menos memória para armazenamento e  possuem a vantagem de se auto corrigir se um erro é cometido. Além disso, podem ser usados para reduzir os erros de arredondamento na solução obtida por métodos exatos. Podem também, sob certas condições, resolver um conjunto de equações não lineares. Ao usar métodos iterativos, no entanto, precisamos sempre saber se a sequência se soluções aproximadas está\n",
+    "convergindo ou não para a solução desejada.\n",
+    "\n",
+    "### Definição\n",
+    "Dados uma sequência de vetores $x^{(k)} \\in V$ e uma norma sobre o espaço vetorial $V$, dizemos que a sequência $\\{x^{(k)}\\}$ converge para $\\bar{x} \\in V$ se $ \\|x^{(k)} − \\bar{x}\\|  \\rightarrow 0$, quando $k \\rightarrow \\infty$.\n",
+    "\n",
+    "Para determinar a solução de um sistema linear por métodos iterativos, precisamos transformar o sistema dado em um outro sistema equivalente que  possa ser definido um processo iterativo.\n",
+    "\n",
+    "Suponha então, que o sistema $Ax = b$ seja reescrito na forma equivalente \n",
+    "\n",
+    "$$x = Hx + g$$\n",
+    "\n",
+    "em que $H = I − A$ e $g = b$. Assim, a solução $\\bar{x}$ de $x = Hx + g$ é  também, solução de $Ax = b$.\n",
+    "\n",
+    "Seja $x^{(0)}$ uma aproximação inicial para a solução $\\bar{x}$, obtemos as aproximações sucessivas $x^{(k)}$ para a solução desejada usando o processo iterativo definido por:\n",
+    "\n",
+    "$$x^{(k)} = Hx^{(k−1)} + g$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Convergência \n",
+    "\n",
+    "### Teorema: \n",
+    "A condição necessária e suficiente para a convergência do processo iterativo definido por $x = Hx + g$ é que $max \\{ |\\lambda_i |\\} < 1$, onde $\\lambda_i$ são os auto-valores da matriz $H$. \n",
+    "\n",
+    "### Corolário (Critério geral de convergência):\n",
+    "Como consequência do teorema acima, ́o processo será convergente se para qualquer norma de matrizes, $\\| H \\| < 1$.\n",
+    "\n",
+    "#### Prova\n",
+    "Na k-ésima iteração o vetor erro, dado por $e^{(k)}=\\bar{x}-x^{(k)}$ será \n",
+    "\n",
+    "$$ e ^{(k)} = H^ke^{(0)}$$\n",
+    "\n",
+    "Tomando normas consistentes, tem-se que \n",
+    "\n",
+    "$$ \\| H^k e^{(0)} \\| \\leq \\| H \\|^k \\|e^{(0)}\\|$$\n",
+    "\n",
+    "portanto \n",
+    "$$ \\| e^{(k)} \\| \\leq \\| H \\|^k \\|e^{(0)}\\|$$\n",
+    "\n",
+    "como $\\| H \\|<1$ tem-se que $\\| e^{(k)} \\| \\rightarrow 0$ quando $k \\rightarrow \\infty$.\n",
+    "\n",
+    "Assim, se $\\| H \\|<1$ para alguma norma, temos a garantia de que o processo iterativo dado por $ x - x^{(k)} = H(x-x^{(k-1)})$ converge para a solução exata $\\bar{x}$. A matriz $H$ é chamada **matriz de iteração**.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Método iterativo de Jacobi-Richardson\n",
+    "\n",
+    "Considere um sistema  de equações lineares $Ax = b$ em que $det(A) \\neq 0$, com a diagonal principal $a_{ii} \\neq 0$, $i=1,...,n$ como segue\n",
+    "\n",
+    "$$ \\begin{cases} \n",
+    "\t         a_{11}x_1 +a_{12}x_2 + \\cdots + a_{1n}x_n = b_1\\\\ \n",
+    "\t         a_{21}x_1 +a_{22}x_2 + \\cdots + a_{2n}x_n = b_2\\\\\n",
+    "\t         \\vdots   \\\\\n",
+    "\t         a_{n1}x_1 +a_{n2}x_2 + \\cdots + a_{nn}x_n = b_1\\\\\n",
+    "             \\end{cases} $$\n",
+    "\n",
+    "Dividindo cada linha do sistema dado pelo elemento da diagonal e isolando $x_1$ na $1^a$ equação, $x_2$ na $2^a$ equação até $x_n$ na n-ésima equação, temos o sistema escrito na forma equivalente:\n",
+    "\n",
+    "$$ \\begin{cases} \n",
+    "\t         x_1 = \\frac{1}{a_{11}} \\left(b_1  - a_{12}x_2 - a_{13}x_3 - \\cdots - a_{1n}x_n \\right)\\\\ \n",
+    "\t         x_2 = \\frac{1}{a_{22}} \\left(b_2  - a_{21}x_1 - a_{23}x_3 - \\cdots - a_{2n}x_n \\right)\\\\ \n",
+    "\t         \\vdots   \\\\\n",
+    "\t         x_n = \\frac{1}{a_{nn}} \\left(b_n  - a_{n1}x_1 - a_{n2}x_2 - \\cdots - a_{n \\, n-1}x_{n-1} \\right)\\\\ \n",
+    "\\end{cases} $$\n",
+    "\n",
+    "O método iterativo de Jacobi-Richardson é dado da seguinte forma:\n",
+    "\n",
+    "$$ \\begin{cases} \n",
+    "             x_1^{(k+1)} = \\frac{b_1}{a_{11}}  - \\frac{a_{12}}{a_{11}}x_2^{(k)} - \\frac{a_{13}}{a_{11}}x_3^{(k)} - \\cdots - \\frac{a_{1n}}{a_{11}}x_n^{(k)} \\\\ \n",
+    "\t         x_2^{(k+1)} = \\frac{b_2}{a_{22}}  - \\frac{a_{21}}{a_{22}}x_1^{(k)} - \\frac{a_{23}}{a_{22}}x_3^{(k)} - \\cdots - \\frac{a_{1n}}{a_{11}}x_n^{(k)} \\\\ \n",
+    "\t         \\vdots   \\\\\n",
+    "\t         x_n^{(k+1)} = \\frac{b_n}{a_{nn}}  - \\frac{a_{n1}}{a_{nn}}x_1^{(k)} - \\frac{a_{n2}}{a_{nn}}x_3^{(k)} - \\cdots - \\frac{a_{n \\, n-1}}{a_{nn}}x_{n-1}^{(k)} \\\\\n",
+    "\\end{cases} $$\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "## Exemplos  Jacobi-Richardson"
    ]
   },
   {
