--- a/2_SISTEMAS_LINEARES/2.5_metodos_iterativos.ipynb
+++ b/2_SISTEMAS_LINEARES/2.5_metodos_iterativos.ipynb
@@ -32,7 +32,7 @@
     "## Convergência \n",
     "\n",
     "### Teorema: \n",
-    "A condição necessária e suficiente para a convergência do processo iterativo definido por $x = Hx + g$ é que $max \\{ |\\lambda_i |\\} < 1$, onde $\\lambda_i$ são os auto-valores da matriz $H$. \n",
+    "A condição necessária e suficiente para a convergência do processo iterativo definido por $x = Hx + g$ é que $max \\{ |\\lambda_i |\\} < 1$, onde $\\lambda_i$ são os autovalores da matriz $H$. \n",
     "\n",
     "### Corolário (Critério geral de convergência):\n",
     "Como consequência do teorema acima, ́o processo será convergente se para qualquer norma de matrizes, $\\| H \\| < 1$.\n",
