--- a/2_SISTEMAS_LINEARES/2.5_metodos_iterativos.ipynb
+++ b/2_SISTEMAS_LINEARES/2.5_metodos_iterativos.ipynb
@@ -10,7 +10,7 @@
     "convergindo ou não para a solução desejada.\n",
     "\n",
     "### Definição\n",
-    "Dados uma sequência de vetores $x^{(k)} \\in V$ e uma norma sobre o espaço vetorial $V$, dizemos que a sequência $\\{x^{(k)}\\}$ converge para $\\bar{x} \\in V$ se $ \\|x^{(k)} − \\bar{x}\\|  \\rightarrow 0$, quando $k \\rightarrow \\infty$.\n",
+    "Dados uma sequência de vetores $x^{(k)} \\in V$ e uma norma sobre o espaço vetorial $V$, dizemos que a sequência $\\{x^{(k)}\\}$ converge para $\\bar{x} \\in V$ se $ \\|x^{(k)} - \\bar{x}\\|  \\rightarrow 0$, quando $k \\rightarrow \\infty$.\n",
     "\n",
     "Para determinar a solução de um sistema linear por métodos iterativos, precisamos transformar o sistema dado em um outro sistema equivalente que  possa ser definido um processo iterativo.\n",
     "\n",
@@ -22,7 +22,7 @@
     "\n",
     "Seja $x^{(0)}$ uma aproximação inicial para a solução $\\bar{x}$, obtemos as aproximações sucessivas $x^{(k)}$ para a solução desejada usando o processo iterativo definido por:\n",
     "\n",
-    "$$x^{(k)} = Hx^{(k−1)} + g$$"
+    "$$x^{(k)} = Hx^{(k-1)} + g$$"
    ]
   },
   {
