--- a/2_SISTEMAS_LINEARES/2.5_metodos_iterativos.ipynb
+++ b/2_SISTEMAS_LINEARES/2.5_metodos_iterativos.ipynb
@@ -18,7 +18,7 @@
     "\n",
     "$$x = Hx + g$$\n",
     "\n",
-    "em que $H = I − A$ e $g = b$. Assim, a solução $\\bar{x}$ de $x = Hx + g$ é  também, solução de $Ax = b$.\n",
+    "em que $H = I - A$ e $g = b$. Assim, a solução $\\bar{x}$ de $x = Hx + g$ é  também, solução de $Ax = b$.\n",
     "\n",
     "Seja $x^{(0)}$ uma aproximação inicial para a solução $\\bar{x}$, obtemos as aproximações sucessivas $x^{(k)}$ para a solução desejada usando o processo iterativo definido por:\n",
     "\n",
