--- a/0_PYTHON_NUMERICO_BASICO/0.2_numpy_basico.ipynb
+++ b/0_PYTHON_NUMERICO_BASICO/0.2_numpy_basico.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 0.2 O básico sobre Numpy\n",
+    "# 0.2 Oms básico sobre Numpy\n",
     "\n",
     "Numpy é o pacote fundamental para programação científica que proporciona um objeto tipo **array** para armazenar dados de forma eficiente e dispõe de uma série de funções para operar e manipular esses dados. Para usar Numpy, uma vez que já esteja instalado, é importá-lo. Para isso podemos usar a seguinte linha de comando, que importa e chama de **np**."
    ]
@@ -717,7 +717,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
